--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -32,7 +32,7 @@
       "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
       "headline": "Shining chrome",
       "subhead": "The following subtitle Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
-      "callToActionMode": "button",
+      "callToActionMode": "link",
       "callToActionText": "Explore",
       "callToActionUrl": "/sale/d",
       "textAlignment": "center"
