--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -33,7 +33,7 @@
       "headline": "Shining chrome",
       "subhead": "The following subtitle Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
       "callToActionMode": "link",
-      "callToActionText": "Explore",
+      "callToActionText": "Go to Collection",
       "callToActionUrl": "/sale/d",
       "textAlignment": "center"
     }
